--- a/MockFileDownloadTool/Views/Shared/_Layout.cshtml
+++ b/MockFileDownloadTool/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
     @RenderBody()
 
     <footer>
-        <p>&copy; @DateTime.Now.Year - <a href="http://www.twitter.com/mikemengell">Mike Mengell</a></p>
+        <p>&copy; @DateTime.Now.Year - <a href="http://www.twitter.com/mikemengell">Mike Mengell</a>.</p>
     </footer>
     
     @Scripts.Render("~/bundles/jquery")
