Placeholder for random content

--- a/MockFileDownloadTool/Views/Home/Index.cshtml
+++ b/MockFileDownloadTool/Views/Home/Index.cshtml
@@ -169,10 +169,24 @@ ViewBag.Title = "Mock File Downloader";
                         </div>
                     </div>
                 </div>
+                @*<div class="form-group">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" class="checkbox-inline" name="isContentRandom" id="isContentRandom"> Forget the content above, just fill the file with random rubbish
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <input type="text" class="form-control input-lg" name="randomSize" id="randomSize" placeholder="How big in bytes? 1024 is a KB, 1048576 is a MB" />
+                        </div>
+                    </div>
+                </div>*@
                 <div class="form-group">
                     <div class="row">
                         <div class="col-lg-6">
-                            <input type="text" class="form-control input-lg" id="headerName1" name="headerName1" placeholder="Additional Header Key" />
+                            <input type="text" class="form-control input-lg on-small-fix-form-spacing" id="headerName1" name="headerName1" placeholder="Additional Header Key" />
                         </div>
                         <div class="col-lg-6">
                             <input type="text" class="form-control input-lg" id="headerValue1" name="headerValue1" placeholder="Additional Header Value" />
@@ -182,7 +196,7 @@ ViewBag.Title = "Mock File Downloader";
                 <div class="form-group">
                     <div class="row">
                         <div class="col-lg-6">
-                            <input type="text" class="form-control input-lg" id="headerName2" name="headerName2" placeholder="Additional Header Key" />
+                            <input type="text" class="form-control input-lg on-small-fix-form-spacing" id="headerName2" name="headerName2" placeholder="Additional Header Key" />
                         </div>
                         <div class="col-lg-6">
                             <input type="text" class="form-control input-lg" id="headerValue2" name="headerValue2" placeholder="Additional Header Value" />
@@ -192,7 +206,7 @@ ViewBag.Title = "Mock File Downloader";
                 <div class="form-group">
                     <div class="row">
                         <div class="col-lg-6">
-                            <input type="text" class="form-control input-lg" id="headerName3" name="headerName3" placeholder="Additional Header Key" />
+                            <input type="text" class="form-control input-lg on-small-fix-form-spacing" id="headerName3" name="headerName3" placeholder="Additional Header Key" />
                         </div>
                         <div class="col-lg-6">
                             <input type="text" class="form-control input-lg" id="headerValue3" name="headerValue3" placeholder="Additional Header Value" />
